# ripdiff

./: .gitattributes  .gitmodules  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  RELEASING.md  build.rs  release.toml
.claude/plans/: feature-suggestions.md
.github/workflows/: ci.yml  release.yml
docs/: strava-demo.tape
src/: app.rs  diff.rs  event.rs  git.rs  main.rs  syntax.rs  ui.rs
src/difftastic/: lib.rs  options.rs
src/difftastic/diff/: sliders.rs  unchanged.rs
src/difftastic/display/: style.rs
src/vendored_parsers/tree-sitter-commonlisp/: package-lock.json
src/vendored_parsers/tree-sitter-latex/: package-lock.json
