[package]
name = "ripdiff"
version = "0.1.2"
edition = "2021"
rust-version = "1.85"
default-run = "ripdiff"
description = "Terminal UI for watching and reviewing agent progress"
license = "MIT"
repository = "https://github.com/martinabeleda/ripdiff"
homepage = "https://github.com/martinabeleda/ripdiff"
documentation = "https://docs.rs/ripdiff"
readme = "README.md"
keywords = ["git", "diff", "tui", "review", "agent"]
categories = ["command-line-utilities", "development-tools"]
include = ["src/**", "Cargo.toml", "README.md", "LICENSE"]

[[bin]]
name = "ripdiff"
path = "src/main.rs"

[[bin]]
name = "rd"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
notify = "6"
clap = { version = "4", features = ["derive"] }
ansi-to-tui = "7"
anyhow = "1"
unicode-width = "0.2"
tempfile = "3"
difftastic = { git = "https://github.com/martinabeleda/difftastic.git", rev = "008ffe865b1b1cf995abf86af456c8e5b44c8119" }

[dev-dependencies]
