[package]
name = "ripdiff"
version = "0.6.0"
edition = "2021"
rust-version = "1.85"
build = "build.rs"
default-run = "ripdiff"
description = "Terminal UI for watching and reviewing agent progress"
license = "MIT"
repository = "https://github.com/martinabeleda/ripdiff"
homepage = "https://github.com/martinabeleda/ripdiff"
documentation = "https://docs.rs/ripdiff"
readme = "README.md"
keywords = ["git", "diff", "tui", "review", "agent"]
categories = ["command-line-utilities", "development-tools"]
include = ["build.rs", "src/**", "vendor/difftastic/**", "Cargo.toml", "README.md", "LICENSE"]

[lib]
name = "difftastic"
path = "src/difftastic/lib.rs"

[[bin]]
name = "ripdiff"
path = "src/main.rs"

[[bin]]
name = "rd"
path = "src/main.rs"

[dependencies]
ansi-to-tui = "7"
anyhow = "1"
bumpalo = "3.16.0"
clap = { version = "4.0.0", features = ["cargo", "derive", "env", "string", "wrap_help"] }
clap_lex = ">= 1.0.0, < 1.1.0"
crossterm = { version = "0.28", features = ["windows"] }
encoding_rs = "0.8.35"
glob = "0.3.1"
hashbrown = "0.14.0"
humansize = "2.1.3"
ignore = ">= 0.4, < 0.4.24"
lazy_static = "1.4.0"
libc = "0.2.108"
line-numbers = "0.3.0"
log = "0.4.14"
notify = "6"
owo-colors = "4.2.3"
pretty_env_logger = "0.5.0"
radix-heap = "0.4.2"
ratatui = "0.29"
rayon = "1.7.0"
regex = "1.10.4"
rustc-hash = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smallvec = "1.13.2"
streaming-iterator = "0.1.9"
strsim = "0.11.0"
strum = { version = "0.26", features = ["derive"] }
tempfile = "3"
tokio = { version = "1", features = ["full"] }
tree-sitter = "~0.26.3"
tree-sitter-ada = "0.1.0"
tree-sitter-bash = "0.23.3"
tree-sitter-c = "0.24"
tree-sitter-c-sharp = "0.23.1"
tree-sitter-clojure-orchard = "0.2.0"
tree-sitter-cmake = "0.7.1"
tree-sitter-cpp = "0.23.4"
tree-sitter-css = "0.23.1"
tree-sitter-dart-orchard = "0.2.1"
tree-sitter-devicetree = "0.14.1"
tree-sitter-elisp = "1.6.1"
tree-sitter-elixir = "0.3.4"
tree-sitter-elm = "5.8.0"
tree-sitter-erlang = "0.13.0"
tree-sitter-fortran = "0.5.1"
tree-sitter-fsharp = "0.1.0"
tree-sitter-gleam = "1.0.0"
tree-sitter-go = "0.23.4"
tree-sitter-haskell = "0.23.1"
tree-sitter-hcl = "1.1.0"
tree-sitter-html = "0.23.2"
tree-sitter-java = "0.23.4"
tree-sitter-javascript = "0.23.1"
tree-sitter-json = "0.24.8"
tree-sitter-julia = "0.23.1"
tree-sitter-language = "0.1.3"
tree-sitter-lua = "0.4"
tree-sitter-make = "1.1.1"
tree-sitter-newick = "1.1.0"
tree-sitter-nix = "0.0.2"
tree-sitter-objc = "3.0.2"
tree-sitter-ocaml = "0.23.2"
tree-sitter-pascal = "0.10.0"
tree-sitter-perl = "1.1.2"
tree-sitter-php = "0.23.11"
tree-sitter-proto = "0.2.0"
tree-sitter-python = "0.23.5"
tree-sitter-qmljs = "0.3.0"
tree-sitter-r = "1.2.0"
tree-sitter-racket = "0.24.7"
tree-sitter-ruby = "0.23.1"
tree-sitter-rust-orchard = "0.16.2"
tree-sitter-scala = "0.23.3"
tree-sitter-scheme = "0.24.7"
tree-sitter-sequel = "0.3.11"
tree-sitter-sfapex = "2.4.0"
tree-sitter-solidity = "1.2.13"
tree-sitter-swift = "0.7.1"
tree-sitter-toml-ng = "0.7.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-verilog = "1.0.3"
tree-sitter-xml = "0.7.0"
tree-sitter-yaml = "0.7.0"
tree-sitter-zig = "1.1.2"
tree_magic_mini = "3.1.6"
typed-arena = "2.0.2"
unicode-width = "0.2"
wu-diff = "0.1.2"

[dev-dependencies]
pretty_assertions = "1.3.0"

[build-dependencies]
cc = "1.2.13"
rayon = "1.7.0"
version_check = "0.9.4"

[target.'cfg(not(any(windows, target_os = "illumos", target_os = "freebsd")))'.dependencies]
tikv-jemallocator = "0.6"
